portfolio name updated

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <section class="home">
       <h2>Hi! My Name Is</h2>
       <h1 class="home__name">
-        Mike <span class="home__name--last">Smith</span>
+        Deepak <span class="home__name--last">S</span>
       </h1>
-      <h2>Web Developer, Designer & Programmer</h2>
+      <h2>Software Developer</h2>
     
     <div class="social-icons">
       <a href="#!">
